# rust_user_db_api

./: Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: user.rs
migration/: Cargo.toml
migration/src/: create_table.rs
src/: database.rs  lib.rs  main.rs  model.rs
