[package]
name = "api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
axum = "0.5.15"

sea-orm = { version = "0.9.2", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
sea-orm-migration = "0.9.2"

serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"
simplelog = "0.12.0"

bcrypt = "0.13.0"

entity = { path = "entity" }
migration = { path = "migration" }